# scheduler

./: README.md  db.py  main.py  models.py  notify.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py
src/: .gitignore  config.py  database.py  dependencies.py  main.py  requirements.txt
src/api/: __init__.py  auth.py  notification.py
src/schemas/: auth.py  notification.py
src/service/: auth.py  notification.py  scheduler.py
