[project]
name = "notify_app"
version = "0.1.0"
description = "Notify app based on Fast API"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = "^3.12"

[tool.poetry.dependencies]
fastapi = "0.128.0"
uvicorn = {version = "0.40.0", extras = ["standard"]}
pydantic = {version = "^2.12.5", extras = ["email"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "**/*.py", from = "src" },
]
