[tool.poetry]
name = "notify-app"
version = "0.1.0"
description = "Notify app based on Fast API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "**/*.py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.128.0"
uvicorn = { version = "0.40.0", extras = ["standard"] }
asyncpg = "^0.29.0"
pydantic = "^2.12.5"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"